--- a/publications.html
+++ b/publications.html
@@ -52,7 +52,7 @@
 
                <div class="blog-short">
                   <h3 class="big">Generating new classes of fixed-time stable systems with predefined upper bound for the settling time</h3>
-				  <h2>Rodrigo Aldana-López, David Gómez-Gutiérrez, Esteban Jiménez-Rodríguez, Juan Diego Sánchez-Torres & Michael Defoort</h2>
+				  <h2 class="small">Rodrigo Aldana-López, David Gómez-Gutiérrez, Esteban Jiménez-Rodríguez, Juan Diego Sánchez-Torres & Michael Defoort</h2>
                   <div>
                      <small>
                      <i class="fa fa-calendar"></i>
@@ -66,7 +66,7 @@
                         alt="ral_paper"  class="pull-left img-responsive thumb img-thumbnail" />
                   </div>
                   <article class="excerpt">
-                     <p class="normal">TThis paper aims to provide a methodology for generating autonomous and non-autonomous systems with a fixed-time stable equilibrium point where an Upper Bound of the Settling Time (UBST) is set a priori as a parameter of the system. Furthermore, some conditions for such an upper bound to be the least one are provided. This construction procedure is a relevant contribution compared with traditional methodologies for generating fixed-time algorithms satisfying time constraints since current estimates of an UBST may be too conservative. The proposed methodology is based on time-scale transformations and Lyapunov analysis. It allows the presentation of a broad class of fixed-time stable systems with predefined UBST, placing them under a common framework with existing methods using time-varying gains. To illustrate the effectiveness of our approach, we generate novel, autonomous and non-autonomous, fixed-time stable algorithms with predefined least UBST. </p>
+                     <p class="normal">This paper aims to provide a methodology for generating autonomous and non-autonomous systems with a fixed-time stable equilibrium point where an Upper Bound of the Settling Time (UBST) is set a priori as a parameter of the system. Furthermore, some conditions for such an upper bound to be the least one are provided. This construction procedure is a relevant contribution compared with traditional methodologies for generating fixed-time algorithms satisfying time constraints since current estimates of an UBST may be too conservative. The proposed methodology is based on time-scale transformations and Lyapunov analysis. It allows the presentation of a broad class of fixed-time stable systems with predefined UBST, placing them under a common framework with existing methods using time-varying gains. To illustrate the effectiveness of our approach, we generate novel, autonomous and non-autonomous, fixed-time stable algorithms with predefined least UBST. </p>
                   </article>
                   <a class="pull-right marginBottom10" href="https://www.tandfonline.com/doi/abs/10.1080/00207179.2021.1936190?journalCode=tcon20">Read More</a>
                </div>
