--- a/publications.html
+++ b/publications.html
@@ -63,6 +63,12 @@
                   <article class="excerpt">
                      <p class="normal">Campos-Macías, L, <b>Aldana-López, Rodrigo</b>, de la Guardia, R, Parra-Vilchis, JI, Gómez-Gutiérrez, D. <a class="pull-right marginBottom10" href="https://www.tandfonline.com/doi/abs/10.1080/00207179.2021.1936190?journalCode=tcon20">Autonomous navigation of MAVs in unknown cluttered environments.</a> J Field Robotics. 2021.</p>
                   </article>
+
+
+                  <article class="excerpt">
+                     <p class="normal">Campos-Macías, L, <b>Aldana-López, Rodrigo</b>, de la Guardia, R, Parra-Vilchis, JI, Gómez-Gutiérrez, D. <a class="pull-right marginBottom10" href="https://www.tandfonline.com/doi/abs/10.1080/00207179.2021.1936190?journalCode=tcon20">Autonomous navigation of MAVs in unknown cluttered environments.</a> J Field Robotics. 2021.</p>
+                  </article>
+
                </div>
                <br>
 
