--- a/publications.html
+++ b/publications.html
@@ -61,10 +61,10 @@
                <div class="blog-short">
                   <h3 class="big">Autonomous navigation of UAVs</h3>
 
-                     <p class="normal">Campos-Macías, L, <b>Aldana-López, Rodrigo</b>, de la Guardia, R, Parra-Vilchis, JI, Gómez-Gutiérrez, D. <a class="pull-right marginBottom10" href="https://www.tandfonline.com/doi/abs/10.1080/00207179.2021.1936190?journalCode=tcon20">Autonomous navigation of MAVs in unknown cluttered environments.</a> J Field Robotics. 2021.</p>
+                     <p class="normal">Campos-Macías, L, <b>Aldana-López, Rodrigo</b>, de la Guardia, R, Parra-Vilchis, JI, Gómez-Gutiérrez, D. <a style="color:blue" class="pull-right marginBottom10" href="https://www.tandfonline.com/doi/abs/10.1080/00207179.2021.1936190?journalCode=tcon20">Autonomous navigation of MAVs in unknown cluttered environments.</a> J Field Robotics. 2021.</p>
 
 
-                     <p class="normal">Campos-Macías, L, <b>Aldana-López, Rodrigo</b>, de la Guardia, R, Parra-Vilchis, JI, Gómez-Gutiérrez, D. <a class="pull-right marginBottom10" href="https://www.tandfonline.com/doi/abs/10.1080/00207179.2021.1936190?journalCode=tcon20">Autonomous navigation of MAVs in unknown cluttered environments.</a> J Field Robotics. 2021.</p>
+                     <p class="normal">Campos-Macías, L, <b>Aldana-López, Rodrigo</b>, de la Guardia, R, Parra-Vilchis, JI, Gómez-Gutiérrez, D. <a style="color:blue" class="pull-right marginBottom10" href="https://www.tandfonline.com/doi/abs/10.1080/00207179.2021.1936190?journalCode=tcon20">Autonomous navigation of MAVs in unknown cluttered environments.</a> J Field Robotics. 2021.</p>
 
                </div>
                <br>
