--- a/publications.html
+++ b/publications.html
@@ -58,19 +58,17 @@
 
                <div class="blog-short">
                   <h3 class="big">Autonomous navigation of UAVs</h3>
+
+      <p>Helen Oleynikova, Christian Lanegger, Zachary Taylor, Michael Pantic, Alexander Millane, Roland Siegwart, and Juan Nieto, “<b>An Open‐Source System for Vision‐Based Micro‐Aerial Vehicle Mapping, Planning, and Flight in Cluttered Environments</b>”. <i>Journal of Field Robotics</i>, 2020.<br>
+        [<a href="publications/jfr_2020_system.pdf">pdf</a> | <a href="publications/jfr_2020_system_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=xQTokwr1le0">video</a> | <a href="https://arxiv.org/abs/1812.03892">arxiv</a> | <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21950">publisher link</a>]
+      </p>
+
+
+
+      <p>Helen Oleynikova, Christian Lanegger, Zachary Taylor, Michael Pantic, Alexander Millane, Roland Siegwart, and Juan Nieto, “<b>An Open‐Source System for Vision‐Based Micro‐Aerial Vehicle Mapping, Planning, and Flight in Cluttered Environments</b>”. <i>Journal of Field Robotics</i>, 2020.<br>
+        [<a href="publications/jfr_2020_system.pdf">pdf</a> | <a href="publications/jfr_2020_system_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=xQTokwr1le0">video</a> | <a href="https://arxiv.org/abs/1812.03892">arxiv</a> | <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21950">publisher link</a>]
+      </p>
                </div>
-
-
-               <div class="blog-short">
-                  <h2 class="small">Campos-Macías, L, <b>Aldana-López, Rodrigo</b>, de la Guardia, R, Parra-Vilchis, JI, Gómez-Gutiérrez, D. <a style="color:blue" class="pull-right marginBottom10" href="https://www.tandfonline.com/doi/abs/10.1080/00207179.2021.1936190?journalCode=tcon20">Autonomous navigation of MAVs in unknown cluttered environments.</a> J Field Robotics. 2021.</p>
-               </div>
-
-
-               <div class="blog-short">
-                  <h2 class="small">Campos-Macías, L, <b>Aldana-López, Rodrigo</b>, de la Guardia, R, Parra-Vilchis, JI, Gómez-Gutiérrez, D. <a style="color:blue" class="pull-right marginBottom10" href="https://www.tandfonline.com/doi/abs/10.1080/00207179.2021.1936190?journalCode=tcon20">Autonomous navigation of MAVs in unknown cluttered environments.</a> J Field Robotics. 2021.</p>	   
-
-
-               <br>
 
 
 
