--- a/publications.html
+++ b/publications.html
@@ -54,10 +54,10 @@
 
 
 
+        <h3 class="big">Autonomous navigation of UAVs</h3>
 
-
-               <div class="blog-short">
-                  <h3 class="big">Autonomous navigation of UAVs</h3>
+               <div class="pub_list">
+                  
 
       <p>Helen Oleynikova, Christian Lanegger, Zachary Taylor, Michael Pantic, Alexander Millane, Roland Siegwart, and Juan Nieto, “<b>An Open‐Source System for Vision‐Based Micro‐Aerial Vehicle Mapping, Planning, and Flight in Cluttered Environments</b>”. <i>Journal of Field Robotics</i>, 2020.<br>
         [<a href="publications/jfr_2020_system.pdf">pdf</a> | <a href="publications/jfr_2020_system_bibtex.txt">bibtex</a> | <a href="https://www.youtube.com/watch?v=xQTokwr1le0">video</a> | <a href="https://arxiv.org/abs/1812.03892">arxiv</a> | <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21950">publisher link</a>]
