--- a/publications.html
+++ b/publications.html
@@ -59,16 +59,11 @@
                <div class="pub_list">
                   
 
-      <p> Helen Oleynikova, Christian Lanegger, Zachary Taylor, Michael Pantic, Alexander Millane, Roland Siegwart, and Juan Nieto, “<b>An Open‐Source System for Vision‐Based Micro‐Aerial Vehicle Mapping, Planning, and Flight in Cluttered Environments</b>”. <i>Journal of Field Robotics</i>, 2020.<br>
-        [<a style="color:blue" href="publications/jfr_2020_system.pdf">pdf</a> | <a style="color:blue" href="publications/jfr_2020_system_bibtex.txt">bibtex</a> | <a style="color:blue" href="https://www.youtube.com/watch?v=xQTokwr1le0">video</a> | <a style="color:blue" href="https://arxiv.org/abs/1812.03892">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21950">publisher link</a>]
+      <p> Leobardo Campos-Macías, Rodrigo Aldana-López, Rafael de la Guardia, José I. Parra-Vilchis, David Gómez-Gutiérrez, “<b>Autonomous navigation of MAVs in unknown cluttered environments</b>”. <i>Journal of Field Robotics</i>, 2020.<br>
+        [<a style="color:blue" href="publications/jfr2020.pdf">pdf</a> | <a style="color:blue" href="publications/jfr2020.txt">bibtex</a> | <a style="color:blue" href="https://www.youtube.com/watch?v=Wq0e7vF6nZM&feature=youtu.be">video</a> | <a style="color:blue" href="https://arxiv.org/abs/1906.08839">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21950">publisher link</a>]
       </p>
       <br>
 
-
-      <p> Helen Oleynikova, Christian Lanegger, Zachary Taylor, Michael Pantic, Alexander Millane, Roland Siegwart, and Juan Nieto, “<b>An Open‐Source System for Vision‐Based Micro‐Aerial Vehicle Mapping, Planning, and Flight in Cluttered Environments</b>”. <i>Journal of Field Robotics</i>, 2020.<br>
-        [<a style="color:blue" href="publications/jfr_2020_system.pdf">pdf</a> | <a style="color:blue" href="publications/jfr_2020_system_bibtex.txt">bibtex</a> | <a style="color:blue" href="https://www.youtube.com/watch?v=xQTokwr1le0">video</a> | <a style="color:blue" href="https://arxiv.org/abs/1812.03892">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21950">publisher link</a>]
-      </p>
-      <br>
 
 
 
