--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,11 @@
 
 
 
+      <p> L. Campos-Macías, D. Gómez-Gutiérrez, Rodrigo Aldana-López, R. de la Guardia and J. I. Parra-Vilchis, “<b>A Hybrid Method for Online Trajectory Planning of Mobile Robots in Cluttered Environments</b>”. <i>IEEE Robotics and Automation Letters </i>, 2017.<br>
+        [<a style="color:blue" href="publications/ral2017.pdf">pdf</a> | <a style="color:blue" href="publications/ral2017.txt">bibtex</a> | <a style="color:blue" href="https://www.youtube.com/watch?v=DJ1IZRL5t1Q&t=1s">video</a> | <a style="color:blue" href="https://arxiv.org/abs/1908.08493">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/7822897">publisher link</a>]
+      </p>
+      <br>
+
 
                </div>
 
