--- a/publications.html
+++ b/publications.html
@@ -140,28 +140,20 @@
 
 
 
-        <h3 class="big">Exact differentiation algorithms</h3><hr>
+        <h3 class="big">Fixed-time stability in control systems</h3><hr>
 
                <div class="pub_list">
                   
 
-      <p> Hernan Haimovich, Richard Seeber, Rodrigo Aldana-López, David Gómez-Gutiérrez, “<b> Differentiator for Noisy Sampled Signals with Best Worst-Case Accuracy.</b>”. <i>IEEE Control Systems Letters </i>, 2021.<br>[<a style="color:blue" href="publications/icsl2021.pdf">pdf</a> | <a style="color:blue" href="publications/icsl2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2106.05320">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/abstract/document/9448332">publisher link</a>]
+      <p> Rodrigo Aldana-López, David Gómez-Gutiérrez, Esteban Jiménez-Rodríguez, Juan Diego Sánchez-Torres, Michael Defoort, “<b> Generating new classes of fixed-time stable systems with predefined upper bound for the settling time.</b>”. <i>International Journal of Control </i>, 2021.<br>[<a style="color:blue" href="publications/ijc2021.pdf">pdf</a> | <a style="color:blue" href="publications/icsl2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1901.02782">arxiv</a> | <a style="color:blue" href="https://www.tandfonline.com/doi/abs/10.1080/00207179.2021.1936190?journalCode=tcon20">publisher link</a>]
       </p>
       <br>
 
 
 
-      <p> Rodrigo Aldana-López, David Gómez-Gutiérrez, Miguel A. Trujillo, Manuel Navarro-Gutiérrez, Javier Ruiz-León, Hector M. Becerra, “<b> A predefined-time first-order exact differentiator based on time-varying gains.</b>”. <i>International Journal of Robust and Nonlinear Control</i>, 2021.<br>[<a style="color:blue" href="publications/ijrnc2021.pdf">pdf</a> | <a style="color:blue" href="publications/ijrnc2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2104.02140">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rnc.5536">publisher link</a>]
+      <p> Juan Diego Sánchez-Torres, Aldo Jonathan Muñoz-Vázquez, Michael Defoort, Rodrigo Aldana-López, David Gómez-Gutiérrez, “<b> Predefined-time integral sliding mode control of second-order systems.</b>”. <i>International Journal of Systems Science </i>, 2020.<br>[ <a style="color:blue" href="publications/ijss2020.txt">bibtex</a> | <a style="color:blue" href="https://www.tandfonline.com/doi/abs/10.1080/00207721.2020.1815893#:~:text=Predefined%2Dtime%20integral%20sliding%20mode%20control%20of%20second%2Dorder%20systems,-Full%20Article&text=This%20manuscript%20introduces%20the%20design,class%20of%20second%2Dorder%20systems.&text=Then%2C%20the%20system%20dynamics%20evolve,during%20the%20integral%20sliding%20motion.">publisher link</a>]
       </p>
       <br>
-
-
-
-
-      <p> Rodrigo Aldana-López, David Gómez-Gutiérrez, Miguel A. Trujillo, Manuel Navarro-Gutiérrez, Javier Ruiz-León, Hector M. Becerra, “<b> A predefined-time first-order exact differentiator based on time-varying gains.</b>”. <i>International Journal of Robust and Nonlinear Control</i>, 2021.<br>[<a style="color:blue" href="publications/ijrnc2021.pdf">pdf</a> | <a style="color:blue" href="publications/ijrnc2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2104.02140">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rnc.5536">publisher link</a>]
-      </p>
-      <br>
-
 
                </div>
 
