--- a/publications.html
+++ b/publications.html
@@ -128,13 +128,6 @@
       <br>
 
 
-
-
-      <p> Rodrigo Aldana-López, David Gómez-Gutiérrez, Miguel A. Trujillo, Manuel Navarro-Gutiérrez, Javier Ruiz-León, Hector M. Becerra, “<b> A predefined-time first-order exact differentiator based on time-varying gains.</b>”. <i>International Journal of Robust and Nonlinear Control</i>, 2021.<br>[<a style="color:blue" href="publications/ijrnc2021.pdf">pdf</a> | <a style="color:blue" href="publications/ijrnc2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2104.02140">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rnc.5536">publisher link</a>]
-      </p>
-      <br>
-
-
                </div>
 
 
@@ -154,6 +147,30 @@
       <p> Juan Diego Sánchez-Torres, Aldo Jonathan Muñoz-Vázquez, Michael Defoort, Rodrigo Aldana-López, David Gómez-Gutiérrez, “<b> Predefined-time integral sliding mode control of second-order systems.</b>”. <i>International Journal of Systems Science </i>, 2020.<br>[ <a style="color:blue" href="publications/ijss2020.txt">bibtex</a> | <a style="color:blue" href="https://www.tandfonline.com/doi/abs/10.1080/00207721.2020.1815893#:~:text=Predefined%2Dtime%20integral%20sliding%20mode%20control%20of%20second%2Dorder%20systems,-Full%20Article&text=This%20manuscript%20introduces%20the%20design,class%20of%20second%2Dorder%20systems.&text=Then%2C%20the%20system%20dynamics%20evolve,during%20the%20integral%20sliding%20motion.">publisher link</a>]
       </p>
       <br>
+
+
+      <p> Aldana-López, R, Gómez-Gutiérrez, D, Jiménez-Rodríguez, E, Sánchez-Torres, JD, Defoort, M, “<b> Enhancing the settling time estimation of a class of fixed-time stable systems.</b>”. <i>International Journal of Robust and Nonlinear Control </i>, 2019.<br>[<a style="color:blue" href="publications/ijc2019b.pdf">pdf</a> | <a style="color:blue" href="publications/icsl2019b.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1809.07012">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/full/10.1002/rnc.4600">publisher link</a>]
+      </p>
+      <br>
+
+
+               </div>
+
+
+        <h3 class="big">Digital communications</h3><hr>
+
+               <div class="pub_list">
+                  
+
+      <p> J. Valencia-Velasco, O. Longoria-Gandara, R. Aldana-Lopez and L. Pizano-Escalante, “<b> Low-Complexity Maximum-Likelihood Detector for IoT BLE Devices.</b>”. <i>IEEE Internet of Things Journal </i>, 2020.<br>[<a style="color:blue" href="publications/iot2020.txt">bibtex</a>| <a style="color:blue" href="https://ieeexplore.ieee.org/document/8962324">publisher link</a>]
+      </p>
+      <br>
+
+
+      <p> Jose M., Valencia, Aldana-López, Rodrigo, Longoria-Gandara, Omar, Pizano-Escalante, Luis, “<b> Digital linear GFSK demodulator for IoT devices.</b>”. <i>IEEE Internet of Things Journal </i>, 2020.<br>[<a style="color:blue" href="publications/iet2018.txt">bibtex</a>| <a style="color:blue" href="https://ietresearch.onlinelibrary.wiley.com/doi/epdf/10.1049/iet-com.2018.5040">publisher link</a>]
+      </p>
+      <br>
+
 
                </div>
 
