--- a/publications.html
+++ b/publications.html
@@ -235,11 +235,33 @@
                <div class="pub_list">
                   
 
-      <p> Rodrigo Aldana-López, Rosario Aragüés, Carlos Sagüés, “<b> EDC: Exact Dynamic Consensus.</b>”. <i>21st, IFAC World Congress</i>, 2020.<br>
-        [<a style="color:blue" href="publications/ifac2020.pdf">pdf</a> |<a style="color:blue" href="publications/nody2020.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896320313264">publisher link</a>]
+      <p> Rodrigo Aldana-López, Rosario Aragüés, Carlos Sagüés, “<b> Attention vs. precision: latency scheduling for uncertainty resilient control systems.</b>”. <i>59th IEEE Conference on Decision and Control (CDC)</i>, 2020.<br>
+        [<a style="color:blue" href="publications/cdc2020.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/9304104">publisher link</a>]
       </p>
       <br>
 
+
+      <p> Rodrigo Aldana-López, Rosario Aragüés, Carlos Sagüés, “<b> EDC: Exact Dynamic Consensus.</b>”. <i>21st, IFAC World Congress</i>, 2020.<br>
+        [<a style="color:blue" href="publications/ifac2020.pdf">pdf</a> |<a style="color:blue" href="publications/ifac2020.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896320313264">publisher link</a>]
+      </p>
+      <br>
+
+      <p> Esteban Jiménez-Rodríguez and Rodrigo Aldana-López and Juan D. Sánchez-Torres and David Gómez-Gutiérrez and Alexander G. Loukianov, “<b> Consistent Discretization of a Class of Predefined-Time Stable Systems.</b>”. <i>21st, IFAC World Congress</i>, 2020.<br>
+        [<a style="color:blue" href="publications/ifac2020b.pdf">pdf</a> |<a style="color:blue" href="publications/ifac2020b.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896320311307">publisher link</a>]
+      </p>
+      <br>
+
+
+      <p> Aldana, Rodrigo and Campos-Macías, Leobardo and Zamora, Julio and Gomez-Gutierrez, David and Cruz, Adan, “<b> Dynamic Learning Rate for Neural Networks: A Fixed-Time Stability Approach.</b>”. <i>I24th International Conference on Pattern Recognition (ICPR)</i>, 2018.<br>
+        [<a style="color:blue" href="publications/icpr2018.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/8546084">publisher link</a>]
+      </p>
+      <br>
+
+
+      <p> J. Valencia-Velasco, R. Aldana-Lopez and O. Longoria-Gandara, “<b> Alternative Viterbi Detection Metrics for GFSK Receivers: A Hardware Reduction Approach.</b>”. <i>IEEE 10th Latin-American Conference on Communications</i>, 2018.<br>
+        [<a style="color:blue" href="publications/latin2018.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/8613225">publisher link</a>]
+      </p>
+      <br>
                </div>
 
 
