--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                      <div class="block Cred">
                         <div class="block-body height-2">
                            <h2 align="center">
-                              <a class="post-link blocks"  href="quads.html">Patents</a>
+                              <a class="post-link blocks"  href="patents.html">Patents</a>
                            </h2>
                         </div>
                      </div>
