--- a/patents.html
+++ b/patents.html
@@ -52,80 +52,85 @@
                <div class="pub_list">
                   
 
-      <p> Campos Macias, Leobardo, ; Marshall, Carl S, ; Arditti Ilitzky, David, ; Gomez Gutierrez, David, ; Parra Vilchis, Jose, ; Zamora Esquivel, Julio C, ; De La Guardia Gonzales, Rafael, ; Aldana Lopez, Rodrigo, “<b> Projection-based Cooperative Collision Avoidance</b>”. <i>Patent US10733896 (B2)</i>, 2021, United States. Also published as DE112019001716 (T5), CN111542867 (A), US2019051194 (A1), WO2019190692 (A1)<br>
+      <p> Campos Macias, Leobardo, ; Marshall, Carl S, ; Arditti Ilitzky, David, ; Gomez Gutierrez, David, ; Parra Vilchis, Jose, ; Zamora Esquivel, Julio C, ; De La Guardia Gonzales, Rafael, ; Aldana Lopez, Rodrigo, “<b>Projection-based Cooperative Collision Avoidance</b>”. <i>Patent US10733896 (B2)</i>, 2021 United States. Also published as DE112019001716 (T5), CN111542867 (A), US2019051194 (A1), WO2019190692 (A1)<br>
         [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=2&ND=3&adjacent=true&locale=en_EP&FT=D&date=20210128&CC=DE&NR=112019001716T5&KC=T5">Espacenet link</a>]
       </p>
       <br>
 
-      <p> Campos Macias, Leobardo Emmanuel, ; Gomez Gutierrez, David, ; Parra Vilchis, José Ignacio, ; De La Guardia Gonzalez, Rafael, ; Aldana Lopez, Rodrigo, “<b> Hybrid Unmanned Vehicles And Related Methods</b>”. <i>Patent US10647424 (B2)</i>, 2020, United States. Also published as DE112018005498 (T5), US2019092464 (A1), WO2019067110 (A1).<br>
+      <p> Campos Macias, Leobardo Emmanuel, ; Gomez Gutierrez, David, ; Parra Vilchis, José Ignacio, ; De La Guardia Gonzalez, Rafael, ; Aldana Lopez, Rodrigo, “<b>Hybrid Unmanned Vehicles And Related Methods</b>”. <i>Patent US10647424 (B2)</i>, 2020 United States. Also published as DE112018005498 (T5), US2019092464 (A1), WO2019067110 (A1).<br>
         [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=3&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201015&CC=DE&NR=112018005498T5&KC=T5">Espacenet link</a>]
       </p>
       <br>
 
 
-      <p> De La Guardia Gonzalez, Rafael, ; Aldana Lopez, Rodrigo, ; Campos Macias, Leobardo, ; Gomez Gutierrez, David, ; Guzman Leguel, Anthony Kyung, ; Parra Vilchis, Jose Ignacio, “<b> Cooperative Mapping For Autonomous Vehicles, Robots Or Multi-agent Systems</b>”. <i>Patent US11004332 (B2)</i>, 2020, United States.<br>
+      <p> De La Guardia Gonzalez, Rafael, ; Aldana Lopez, Rodrigo, ; Campos Macias, Leobardo, ; Gomez Gutierrez, David, ; Guzman Leguel, Anthony Kyung, ; Parra Vilchis, Jose Ignacio, “<b>Cooperative Mapping For Autonomous Vehicles, Robots Or Multi-agent Systems</b>”. <i>Patent US11004332 (B2)</i>, 2020 United States.<br>
         [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=7&ND=3&adjacent=true&locale=en_EP&FT=D&date=20200430&CC=US&NR=2020135014A1&KC=A1">Espacenet link</a>]
       </p>
       <br>
 
-      <p> Parra Vilchis, Jose I, ; Guzman Leguel, Anthony K, ; Gutierrez, David Gomez, ; Campos Macias, Leobardo E, ; Gonzalez, Rafael De La Guardia, ; Lopez, Rodrigo Aldana, “<b> Decentralized Synchronization Of Multiple Agents</b>”. <i>Patent US10763868 (B2)</i>, 2020, United States.<br>
+      <p> Parra Vilchis, Jose I, ; Guzman Leguel, Anthony K, ; Gutierrez, David Gomez, ; Campos Macias, Leobardo E, ; Gonzalez, Rafael De La Guardia, ; Lopez, Rodrigo Aldana, “<b>Decentralized Synchronization Of Multiple Agents</b>”. <i>Patent US10763868 (B2)</i>, 2020 United States.<br>
         [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=9&ND=3&adjacent=true&locale=en_EP&FT=D&date=20191024&CC=US&NR=2019326916A1&KC=A1">Espacenet link</a>]
       </p>
       <br>
 
-      <p> Cordourier Maruri, Hector, ; Huang, Jonathan, ; Lopez Meyer, Paulo, ; De La Guardia Gonzalez, Rafael, ; Gomez Gutierrez, David, ; Aldana Lopez, Rodrigo, ; Campos Macias, Leobardo, ; Parra Vilchis, Jose, ; Camacho Perez, Jose, ; Zamora Esquivel, Julio, “<b>Systems, Apparatus, And Methods For Drone Audio Noise Reduction</b>”. <i>Patent US10692481 (B2)</i>, 2019, United States. Also published as CN109754815 (A),   DE102018124769 (A1), US10290293 (B2), US2019043465 (A1).<br>
+      <p> Cordourier Maruri, Hector, ; Huang, Jonathan, ; Lopez Meyer, Paulo, ; De La Guardia Gonzalez, Rafael, ; Gomez Gutierrez, David, ; Aldana Lopez, Rodrigo, ; Campos Macias, Leobardo, ; Parra Vilchis, Jose, ; Camacho Perez, Jose, ; Zamora Esquivel, Julio, “<b>Systems, Apparatus, And Methods For Drone Audio Noise Reduction</b>”. <i>Patent US10692481 (B2)</i>, 2019 United States. Also published as CN109754815 (A),   DE102018124769 (A1), US10290293 (B2), US2019043465 (A1).<br>
         [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=10&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190801&CC=US&NR=2019237057A1&KC=A1">Espacenet link</a>]
       </p>
       <br>
 
 
-      <p> Aldana Lopez, Rodrigo, ; Campos Macias, Leobardo, ; Gomez Gutierrez, David, ; Parra Vilchis, Jose, ; De La Guardia Gonzalez, Rafael, “<b>Drone Path Planning</b>”. <i>Patent US10768623 (B2)</i>, 2019, United States.<br>
+      <p> Aldana Lopez, Rodrigo, ; Campos Macias, Leobardo, ; Gomez Gutierrez, David, ; Parra Vilchis, Jose, ; De La Guardia Gonzalez, Rafael, “<b>Drone Path Planning</b>”. <i>Patent US10768623 (B2)</i>, 2019 United States.<br>
         [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=10&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190801&CC=US&NR=2019237057A1&KC=A1">Espacenet link</a>]
       </p>
       <br>
 
 
-      <p> Gutierrez David Gomez; Campos Macias Leobardo; Aldana Lopez Rodrigo; De La Guardia Gonzalez Rafael; Zamora Esquivel Julio; Parra Vilchis Jose; Arditti Ilitzky David, “<b>Vision-based Cooperative Collision Avoidance</b>”. <i>Patent US10657833 (B2) </i>, 2019, United States. Also published as DE102018127144 (A1), US2019051193 (A1), CN109859533 (A).<br>
+      <p> Gutierrez David Gomez; Campos Macias Leobardo; Aldana Lopez Rodrigo; De La Guardia Gonzalez Rafael; Zamora Esquivel Julio; Parra Vilchis Jose; Arditti Ilitzky David, “<b>Vision-based Cooperative Collision Avoidance</b>”. <i>Patent US10657833 (B2) </i>, 2019 United States. Also published as DE102018127144 (A1), US2019051193 (A1), CN109859533 (A).<br>
         [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=12&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190607&CC=CN&NR=109859533A&KC=A">Espacenet link</a>]
       </p>
       <br>
 
-      <p> Gomez Gutierrez, David, ; Parra Vilchis, Jose Ignacio, ; De La Guardia Gonzalez, Rafael, ; Campos Macias, Leobardo Emmanuel, ; Aldana Lopez, Rodrigo, “<b>Unmanned Aerial Vehicles And Related Methods And Systems</b>”. <i>Patent US10332394 (B2) </i>, 2019, United States. Also published as US2019051169 (A1), WO2019094122 (A1).<br>
+      <p> Gomez Gutierrez, David, ; Parra Vilchis, Jose Ignacio, ; De La Guardia Gonzalez, Rafael, ; Campos Macias, Leobardo Emmanuel, ; Aldana Lopez, Rodrigo, “<b>Unmanned Aerial Vehicles And Related Methods And Systems</b>”. <i>Patent US10332394 (B2) </i>, 2019 United States. Also published as US2019051169 (A1), WO2019094122 (A1).<br>
         [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=13&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190516&CC=WO&NR=2019094122A1&KC=A1">Espacenet link</a>]
       </p>
       <br>
 
 
-      <p> Aldana López, Rodrigo, ; Gómez Gutiérrez, David, ; Parra Vilchis, José Ignacio, ; De La Guardia González, Rafael, ; Campos Macías, Leobardo Emmanuel, “<b>Transformable Unmanned Vehicles And Related Methods</b>”. <i>Patent US10696372 (B2) </i>, 2019, United States.<br>
+      <p> Aldana López, Rodrigo, ; Gómez Gutiérrez, David, ; Parra Vilchis, José Ignacio, ; De La Guardia González, Rafael, ; Campos Macías, Leobardo Emmanuel, “<b>Transformable Unmanned Vehicles And Related Methods</b>”. <i>Patent US10696372 (B2) </i>, 2019 United States.<br>
         [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=14&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190404&CC=US&NR=2019100296A1&KC=A1">Espacenet link</a>]
       </p>
       <br>
 
 
-      <p>Campos Macias, Leobardo, ; Cordourier Maruri, Hector, ; Gomez Gutierrez, David, ; Aldana Lopez, Rodrigo, ; Parra Vilchis, Jose, “<b> Methods And Apparatus For Preventing Collisions Between Drones Based On Drone-to-drone Acoustic Communications  </b>”. <i>Patent US10909864 (B2)</i>, 2019, United States.<br>
+      <p>Campos Macias, Leobardo, ; Cordourier Maruri, Hector, ; Gomez Gutierrez, David, ; Aldana Lopez, Rodrigo, ; Parra Vilchis, Jose, “<b>Methods And Apparatus For Preventing Collisions Between Drones Based On Drone-to-drone Acoustic Communications  </b>”. <i>Patent US10957209 (B2)</i>, 2019 United States.<br>
         [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=17&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190214&CC=US&NR=2019051197A1&KC=A1">Espacenet link</a>]
       </p>
       <br>
 
+      <p>De La Guardia Gonzalez, Rafael, ; Pohl, Daniel, ; Gomez Gutierrez, David, ; Hippelein, Andreas, ; Campos Macias, Leobardo, ; Aldana Lopez, Rodrigo, ; Parra Vilchis, Jose, ; Vervoorst, Jan Willem, “<b>Drone Obstacle Avoidance Using Real-time Wind Estimation </b>”. <i>Patent US10909864 (B2)</i>, 2020 United States.<br>
+        [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=16&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190214&CC=US&NR=2019051195A1&KC=A1">Espacenet link</a>]
+      </p>
+      <br>
 
-      <p>Pohl, Daniel, ; Aldana Lopez, Rodrigo, ; Campos Macias, Leobardo, ; De La Guardia Gonzalez, Rafael, ; Gomez Gutierrez, David, ; Parra Vilchis, Jose, ; Schick, Roman, ; Lopez, Rodrigo Aldana, ; Macias, Leobardo Campos, ; Gutierrez, David Gomez, ; Vilchis, Jose Parra, “<b> Autonomous Rescue Lane</b>”. <i>Patent US10802504 (B2)</i>, 2019, United States.<br>
+
+      <p>Pohl, Daniel, ; Aldana Lopez, Rodrigo, ; Campos Macias, Leobardo, ; De La Guardia Gonzalez, Rafael, ; Gomez Gutierrez, David, ; Parra Vilchis, Jose, ; Schick, Roman, ; Lopez, Rodrigo Aldana, ; Macias, Leobardo Campos, ; Gutierrez, David Gomez, ; Vilchis, Jose Parra, “<b>Autonomous Rescue Lane</b>”. <i>Patent US10802504 (B2)</i>, 2019 United States.<br>
         [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=19&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190214&CC=US&NR=2019049994A1&KC=A1">Espacenet link</a>]
       </p>
       <br>
 
 
-      <p>Gomez Gutierrez, David, ; Falconer, Maynard C, ; Skeba, Kirk W, ; Aldana Lopez, Rodrigo, “<b> Trajectory Tracking Controllers For Rotorcraft Unmanned Aerial Vehicles (uavs)</b>”. <i>Patent US10564650 (B2)  </i>, 2019, United States.<br>
+      <p>Gomez Gutierrez, David, ; Falconer, Maynard C, ; Skeba, Kirk W, ; Aldana Lopez, Rodrigo, “<b>Trajectory Tracking Controllers For Rotorcraft Unmanned Aerial Vehicles (uavs)</b>”. <i>Patent US10564650 (B2)  </i>, 2019 United States.<br>
         [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=20&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190131&CC=US&NR=2019033892A1&KC=A1">Espacenet link</a>]
       </p>
       <br>
 
-      <p>Aldana Lopez, Rodrigo, ; Parra Vilchis, Jose I, ; De La Guardia Gonzalez, Rafael, ; Gomez Gutierrez, David, “<b>Methods And Apparatus To Implement Nonlinear Control Of Vehicles Moved Using Multiple Motors</b>”. <i>Patent US10372134 (B2)</i>, 2019, United States.<br>
+      <p>Aldana Lopez, Rodrigo, ; Parra Vilchis, Jose I, ; De La Guardia Gonzalez, Rafael, ; Gomez Gutierrez, David, “<b>Methods And Apparatus To Implement Nonlinear Control Of Vehicles Moved Using Multiple Motors</b>”. <i>Patent US10372134 (B2)</i>, 2019 United States.<br>
         [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=21&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190103&CC=US&NR=2019004519A1&KC=A1">Espacenet link</a>]
       </p>
       <br>
 
 
-      <p>Gomez Gutierrez, David, ; De La Guardia Gonzalez, Rafael, ; Parra Vilchis, Jose I, ; Aldana Lopez, Rodrigo, “<b> Unmanned Aerial Vehicles And Related Methods And Systems</b>”. <i>Patent US10507916 (B2)</i>, 2019, United States.<br>
+      <p>Gomez Gutierrez, David, ; De La Guardia Gonzalez, Rafael, ; Parra Vilchis, Jose I, ; Aldana Lopez, Rodrigo, “<b>Unmanned Aerial Vehicles And Related Methods And Systems</b>”. <i>Patent US10507916 (B2)</i>, 2019 United States.<br>
         [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=22&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190103&CC=US&NR=2019002103A1&KC=A1">Espacenet link</a>]
       </p>
       <br>
@@ -204,12 +209,7 @@
       <br>
 
       <p>Aldana López, Rodrigo, ; Campos Macías, Leobardo Emmanuel, ; Zamora Esquivel, Julio Cesar, ; Cruz Vargas, Jesús Adán, ; Gómez Gutiérrez, David, “<b> Methods And Apparatus For Training A Neural Network </b>”. <i>Patent application US2019095794 (A1)</i>, 2020, United States. Also published as EP3757687 (A1)  <br>
-        [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=15&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190328&CC=US&NR=2019095794A1&KC=A1">Espacenet link</a>]
-      </p>
-      <br>
-
-      <p>De La Guardia Gonzalez, Rafael, ; Pohl, Daniel, ; Gomez Gutierrez, David, ; Hippelein, Andreas, ; Campos Macias, Leobardo, ; Aldana Lopez, Rodrigo, ; Parra Vilchis, Jose, ; Vervoorst, Jan Willem, “<b> Drone Obstacle Avoidance Using Real-time Wind Estimation </b>”. <i>Patent application US10909864 (B2)</i>, 2020, United States.<br>
-        [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=15&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190328&CC=US&NR=2019095794A1&KC=A1">Espacenet link</a>]
+        [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=8&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201230&CC=EP&NR=3757687A1&KC=A1">Espacenet link</a>]
       </p>
       <br>
 
