--- a/patents.html
+++ b/patents.html
@@ -177,44 +177,44 @@
 
 
 
-      <p> Parra Vilchis, Jose, ;De La Guardia Gonzalez, Rafael, ; Aldana Lopez, Rodrigo, ; Gomez Gutierrez, David, ; Campos Macias, Leobardo, “<b> Contextual Memory Map Representation For 3d Reconstruction. </b>”. <i>Patent application US2020027262 (A1)</i>, 2021, United States. Also published as WO2021061241 (A1)<br>
+      <p> Parra Vilchis, Jose, ;De La Guardia Gonzalez, Rafael, ; Aldana Lopez, Rodrigo, ; Gomez Gutierrez, David, ; Campos Macias, Leobardo, “<b>Contextual Memory Map Representation For 3d Reconstruction. </b>”. <i>Patent application US2020027262 (A1)</i>, 2021 United States. Also published as WO2021061241 (A1)<br>
         [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=0&ND=3&adjacent=true&locale=en_EP&FT=D&date=20210401&CC=WO&NR=2021061241A1&KC=A1">Espacenet link</a>]
       </p>
       <br>
 
 
-      <p> Gomez Gutierrez, David, ; Parra Vilchis, Jose, ; De La Guardia Gonzalez, Rafael, ; Aldana Lopez, Rodrigo, ; Campos Macias, Leobardo, “<b> Dynamic Generation Of Restricted Flight Zones For Drones. </b>”. <i>Patent application US2021034078 (A1)</i>, 2021, United States. Also published as WO2019132898 (A1), WO2019132898 (A8)  <br>
+      <p> Gomez Gutierrez, David, ; Parra Vilchis, Jose, ; De La Guardia Gonzalez, Rafael, ; Aldana Lopez, Rodrigo, ; Campos Macias, Leobardo, “<b>Dynamic Generation Of Restricted Flight Zones For Drones. </b>”. <i>Patent application US2021034078 (A1)</i>, 2021 United States. Also published as WO2019132898 (A1), WO2019132898 (A8)  <br>
         [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=1&ND=3&adjacent=true&locale=en_EP&FT=D&date=20210204&CC=US&NR=2021034078A1&KC=A1">Espacenet link</a>]
       </p>
       <br>
 
-      <p> Campos Macias, Leobardo, ; Aldana Lopez, Rodrigo, ; De La Guardia Gonzalez, Rafael, ; Gomez Gutierrez, David, ; Parra Vilchis, Jose, “<b> Methods And Apparatus For Dynamically Routing Robots Based On Exploratory On-board Mapping. </b>”. <i>Patent application US2019220020 (A1)</i>, 2020, United States. Also published as DE102020104358 (A1)  <br>
+      <p> Campos Macias, Leobardo, ; Aldana Lopez, Rodrigo, ; De La Guardia Gonzalez, Rafael, ; Gomez Gutierrez, David, ; Parra Vilchis, Jose, “<b>Methods And Apparatus For Dynamically Routing Robots Based On Exploratory On-board Mapping. </b>”. <i>Patent application US2019220020 (A1)</i>, 2020 United States. Also published as DE102020104358 (A1)  <br>
         [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=4&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201001&CC=DE&NR=102020104358A1&KC=A1">Espacenet link</a>]
       </p>
       <br>
 
-      <p>Zamora Esquivel, Julio, ; Aldana Lopez, Rodrigo, ; Campos Macias, Leobardo, ; Cruz Vargas, Jesus, ; De La Guardia Gonzalez, Rafael, ; Gomez Gutierrez, David, ; Macias Garcia, Edgar, “<b> Methods And Apparatus To Facilitate Autonomous Navigation Of Robotic Devices. </b>”. <i>Patent application US2019220043 (A1)</i>, 2020, United States. Also published as DE102020105045 (A1)  <br>
+      <p>Zamora Esquivel, Julio, ; Aldana Lopez, Rodrigo, ; Campos Macias, Leobardo, ; Cruz Vargas, Jesus, ; De La Guardia Gonzalez, Rafael, ; Gomez Gutierrez, David, ; Macias Garcia, Edgar, “<b>Methods And Apparatus To Facilitate Autonomous Navigation Of Robotic Devices. </b>”. <i>Patent application US2019220043 (A1)</i>, 2020 United States. Also published as DE102020105045 (A1)  <br>
         [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=5&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201001&CC=DE&NR=102020105045A1&KC=A1">Espacenet link</a>]
       </p>
       <br>
 
-      <p>ZXue, Feng, ; Akdeniz, Mustafa, ; Suh, Seong-youp John, ; Bai, Jingwen, ; Yeh, Shu-ping, ; Aldana Lopez, Rodrigo, ; Alban, Eduardo, ; Arditti Ilitzky, David, ; Auzas, Philippe, ; Byrne, Jonathan, ; Campos Macias, Leobardo, ; Davis, Mark, ; De La Guardia Gonzalez, Rafael, ; Gomez Gutierrez, David, ; Huusari, Timo, ; Jackson, Bradley Alan, ; Karella, Ranganadh, ; Kasturi, Sreenivas, ; Ke, Mengkun, ; Liao, Ching-yu, ; Shi, Tiefeng, ; Talwar, Shilpa, ; Tong, Daniel, ; Yiu, Candy, “<b> Unmanned Aerial Vehicle Communication. </b>”. <i>Patent application WO2020113062 (A1)</i>, 2020, World Intellectual Property Organization. Also published as DE102020105045 (A1)  <br>
+      <p>ZXue, Feng, ; Akdeniz, Mustafa, ; Suh, Seong-youp John, ; Bai, Jingwen, ; Yeh, Shu-ping, ; Aldana Lopez, Rodrigo, ; Alban, Eduardo, ; Arditti Ilitzky, David, ; Auzas, Philippe, ; Byrne, Jonathan, ; Campos Macias, Leobardo, ; Davis, Mark, ; De La Guardia Gonzalez, Rafael, ; Gomez Gutierrez, David, ; Huusari, Timo, ; Jackson, Bradley Alan, ; Karella, Ranganadh, ; Kasturi, Sreenivas, ; Ke, Mengkun, ; Liao, Ching-yu, ; Shi, Tiefeng, ; Talwar, Shilpa, ; Tong, Daniel, ; Yiu, Candy, “<b>Unmanned Aerial Vehicle Communication. </b>”. <i>Patent application WO2020113062 (A1)</i>, 2020 World Intellectual Property Organization. Also published as DE102020105045 (A1)  <br>
         [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=6&ND=3&adjacent=true&locale=en_EP&FT=D&date=20200604&CC=WO&NR=2020113062A1&KC=A1">Espacenet link</a>]
       </p>
       <br>
 
-      <p>Cavalcanti, Dave, ; Gómez Gutiérrez, David, ; Campos Macias, Leobardo, ; Osuna Ibarra, Linda Patricia, ; Aldana Lopez, Rodrigo, ; Arditti Ilitzky, David, ; Caballero Barragan, Humberto, “<b> Wireless Feedback Control Loops With Neural Networks To Predict Target System States. </b>”. <i>Patent application US2019332918 (A1)</i>, 2020, United States. Also published as EP3757687 (A1)  <br>
+      <p>Cavalcanti, Dave, ; Gómez Gutiérrez, David, ; Campos Macias, Leobardo, ; Osuna Ibarra, Linda Patricia, ; Aldana Lopez, Rodrigo, ; Arditti Ilitzky, David, ; Caballero Barragan, Humberto, “<b>Wireless Feedback Control Loops With Neural Networks To Predict Target System States. </b>”. <i>Patent application US2019332918 (A1)</i>, 2020 United States. Also published as EP3757687 (A1)  <br>
         [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=6&ND=3&adjacent=true&locale=en_EP&FT=D&date=20200604&CC=WO&NR=2020113062A1&KC=A1">Espacenet link</a>]
       </p>
       <br>
 
-      <p>Aldana López, Rodrigo, ; Campos Macías, Leobardo Emmanuel, ; Zamora Esquivel, Julio Cesar, ; Cruz Vargas, Jesús Adán, ; Gómez Gutiérrez, David, “<b> Methods And Apparatus For Training A Neural Network </b>”. <i>Patent application US2019095794 (A1)</i>, 2020, United States. Also published as EP3757687 (A1)  <br>
+      <p>Aldana López, Rodrigo, ; Campos Macías, Leobardo Emmanuel, ; Zamora Esquivel, Julio Cesar, ; Cruz Vargas, Jesús Adán, ; Gómez Gutiérrez, David, “<b>Methods And Apparatus For Training A Neural Network </b>”. <i>Patent application US2019095794 (A1)</i>, 2020 United States. Also published as EP3757687 (A1)  <br>
         [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=8&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201230&CC=EP&NR=3757687A1&KC=A1">Espacenet link</a>]
       </p>
       <br>
 
 
-      <p>Parra Vilchis, Jose Ignacio, ; Aldana Lopez, Rodrigo, ; Gomez Gutierrez, David, ; De La Guardia Gonzalez, Rafael, ; Campos Macias, Leobardo, “<b> Hardware Accelerator For Online Estimation  </b>”. <i>Patent application US2019050370 (A1)</i>, 2019, United States.<br>
+      <p>Parra Vilchis, Jose Ignacio, ; Aldana Lopez, Rodrigo, ; Gomez Gutierrez, David, ; De La Guardia Gonzalez, Rafael, ; Campos Macias, Leobardo, “<b> ardware Accelerator For Online Estimation  </b>”. <i>Patent application US2019050370 (A1)</i>, 2019 United States.<br>
         [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=18&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190214&CC=US&NR=2019050370A1&KC=A1">Espacenet link</a>]
       </p>
       <br>
