--- a/publications.html
+++ b/publications.html
@@ -60,7 +60,7 @@
                   
 
       <p> Leobardo Campos-Macías, Rodrigo Aldana-López, Rafael de la Guardia, José I. Parra-Vilchis, David Gómez-Gutiérrez, “<b>Autonomous navigation of MAVs in unknown cluttered environments</b>”. <i>Journal of Field Robotics</i>, 2020.<br>
-        [<a style="color:blue" href="publications/jfr2020.pdf">pdf</a> | <a style="color:blue" href="publications/jfr2020.txt">bibtex</a> | <a style="color:blue" href="https://www.youtube.com/watch?v=Wq0e7vF6nZM&feature=youtu.be">video</a> | <a style="color:blue" href="https://arxiv.org/abs/1906.08839">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21950">publisher link</a>]
+        [<a style="color:blue" href="publications/jfr2020.pdf">pdf</a> | <a style="color:blue" href="publications/jfr2020.txt">bibtex</a> | <a style="color:blue" href="https://www.youtube.com/watch?v=Wq0e7vF6nZM&feature=youtu.be">video</a> | <a style="color:blue" href="https://arxiv.org/abs/1906.08839">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21959">publisher link</a>]
       </p>
       <br>
 
@@ -100,7 +100,7 @@
 
 
       <p> Aldana-López, R, Gómez-Gutiérrez, D, Defoort, M, Sánchez-Torres, JD, Muñoz-Vázquez, AJ, “<b>A class of robust consensus algorithms with predefined-time convergence under switching topologies</b>”. <i>International Journal of Robust and Nonlinear Control </i>, 2019.<br>
-        [<a style="color:blue" href="publications/ijrnc2019.pdf">pdf</a> | <a style="color:blue" href="publications/fi2020.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1812.07545">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rnc.4715">publisher link</a>]
+        [<a style="color:blue" href="publications/ijrnc2019.pdf">pdf</a> | <a style="color:blue" href="publications/ijrnc2019.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1812.07545">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rnc.4715">publisher link</a>]
       </p>
       <br>
 
@@ -138,7 +138,7 @@
                <div class="pub_list">
                   
 
-      <p> Rodrigo Aldana-López, David Gómez-Gutiérrez, Esteban Jiménez-Rodríguez, Juan Diego Sánchez-Torres, Michael Defoort, “<b> Generating new classes of fixed-time stable systems with predefined upper bound for the settling time.</b>”. <i>International Journal of Control </i>, 2021.<br>[<a style="color:blue" href="publications/ijc2021.pdf">pdf</a> | <a style="color:blue" href="publications/icsl2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1901.02782">arxiv</a> | <a style="color:blue" href="https://www.tandfonline.com/doi/abs/10.1080/00207179.2021.1936190?journalCode=tcon20">publisher link</a>]
+      <p> Rodrigo Aldana-López, David Gómez-Gutiérrez, Esteban Jiménez-Rodríguez, Juan Diego Sánchez-Torres, Michael Defoort, “<b> Generating new classes of fixed-time stable systems with predefined upper bound for the settling time.</b>”. <i>International Journal of Control </i>, 2021.<br>[<a style="color:blue" href="publications/ijc2021.pdf">pdf</a> | <a style="color:blue" href="publications/ijc2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1901.02782">arxiv</a> | <a style="color:blue" href="https://www.tandfonline.com/doi/abs/10.1080/00207179.2021.1936190?journalCode=tcon20">publisher link</a>]
       </p>
       <br>
 
@@ -149,7 +149,7 @@
       <br>
 
 
-      <p> Aldana-López, R, Gómez-Gutiérrez, D, Jiménez-Rodríguez, E, Sánchez-Torres, JD, Defoort, M, “<b> Enhancing the settling time estimation of a class of fixed-time stable systems.</b>”. <i>International Journal of Robust and Nonlinear Control </i>, 2019.<br>[<a style="color:blue" href="publications/ijc2019b.pdf">pdf</a> | <a style="color:blue" href="publications/icsl2019b.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1809.07012">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/full/10.1002/rnc.4600">publisher link</a>]
+      <p> Aldana-López, R, Gómez-Gutiérrez, D, Jiménez-Rodríguez, E, Sánchez-Torres, JD, Defoort, M, “<b> Enhancing the settling time estimation of a class of fixed-time stable systems.</b>”. <i>International Journal of Robust and Nonlinear Control </i>, 2019.<br>[<a style="color:blue" href="publications/ijrnc2019b.pdf">pdf</a> | <a style="color:blue" href="publications/ijrnc2019b.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1809.07012">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/full/10.1002/rnc.4600">publisher link</a>]
       </p>
       <br>
 
