--- a/career.html
+++ b/career.html
@@ -71,7 +71,7 @@
                               <p class="text-muted"><p>At Intel Labs, Intel Corporation, Mexico</p></p>
                               <div class="parent">
                               <p class="text-muted">
-                                Development and implementation of algorithms for Online Trajectory Planning and robust tracking control on palm-sized quadcopters. Worked both with very constrained embeeded systems, as well as with powerful computing units equiped with cutting edge hardware accelerators for computer vision and machine learning. Won the Hi5 Award 4 times in a course of ~3 years as a result of 21 filed patent applications.
+                                Development and implementation of algorithms for Online Trajectory Planning and robust tracking control on palm-sized quadcopters. Worked both with very constrained embedded systems, as well as with powerful computing units equiped with cutting edge hardware accelerators for computer vision and machine learning. Won the Hi5 Award 4 times in a course of ~3 years as a result of 23 filed patent applications.
                               </p>
                               </div>
                           </div>
@@ -124,7 +124,7 @@
                             <p class="text-muted"><p>Western Institute of Technology and Higher Education (ITESO)</p></p>
                             <div class="parent">
                              <p class="text-muted">
-                              Participated in the research of a new design of a GFSK demodulator for Bluetooth with <a  class="several" href="https://iteso.mx/web/general/detalle?group_id=3084565">Dr. Omar Longoria</a>
+                              Participated in the research for the design of a new GFSK demodulator for Bluetooth with <a  class="several" href="https://iteso.mx/web/general/detalle?group_id=3084565">Dr. Omar Longoria</a>
                              </p>
                             </div>
                           </div>
