--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                      <div class="block" style="background-image:url(assets/12.jpg); background-position: center; background-size: 120%; opacity:1;">
                         <div class="block-body height-2">
                            <h2 align="center">
-                              <a class="custom"  href="quads.html">Teaching</a>
+                              <a class="custom"  href="teaching.html">Teaching</a>
                            </h2>
                         </div>
                      </div>
