--- a/teaching.html
+++ b/teaching.html
@@ -45,44 +45,45 @@
 
 
 
- <h3 class="big"> Computer architecture (Undergraduate level), at the Western Institute of Technology and Higher Education (ITESO).</h3><hr><br>
+ <h3 class="big"> Western Institute of Technology and Higher Education (ITESO)</h3><hr><br>
 			
+
+<h2 class="small"> Computer architecture (Undergraduate level) </h2>
 <ul>
 <li> Summer 2019</li>
 <li> Spring 2019</li>
 <li> Spring 2018</li>
 <li> Autumn 2017</li>
 <li> Autumn 2016</li>
-</ul>
+</ul><br>
 
-
- <h3 class="big"> Embedded systems II (Undergraduate level), at the Western Institute of Technology and Higher Education (ITESO).</h3><hr><br>
+<h2 class="small">  Embedded systems II (Undergraduate level) </h2>
 			
 <ul>
 <li> Autumn 2018</li>
 <li> Spring 2018</li>
 <li> Spring 2017</li>
-</ul>
+</ul><br>
 
+ <h3 class="big"> Monterrey Institute of Technology and Higher Education (ITESM)</h3><hr><br>
 
- <h3 class="big"> Topics on advanced control with application to the control of Aerial Robots (Undergraduate level), at the Monterrey Institute of Technology and Higher Education (ITESM).</h3><hr><br>
-			
+<h2 class="small"> Topics on advanced control with application to the control of Aerial Robots (Undergraduate level)</h2>			
+
 <ul>
 <li> Autumn 2018</li>
 <li> Autumn 2016</li>
-</ul>
+</ul><br>
 
- <h3 class="big"> Embedded Software with application to the control of Aerial Robots (Graduate level), at the Monterrey Institute of Technology and Higher Education (ITESM).</h3><hr><br>
+<h2 class="small"> Embedded Software with application to the control of Aerial Robots (Graduate level)</h2>			
 			
 <ul>
 <li> Spring 2017</li>
-</ul>
+</ul><br>
 
-<h3 class="big"> Embedded Systems (Graduate level), at the Monterrey Institute of Technology and Higher Education (ITESM).</h3><hr><br>
-			
+<h2 class="small"> Embedded Systems (Graduate level)</h2>						
 <ul>
 <li> Autumn 2017</li>
-</ul>
+</ul><br>
 
 
 
