--- a/teaching.html
+++ b/teaching.html
@@ -67,20 +67,20 @@
 
  <h3 class="big"> Monterrey Institute of Technology and Higher Education (ITESM)</h3><hr><br>
 
-<h2> Topics on advanced control with application to the control of Aerial Robots (Undergraduate level)</h2>			
+<h2> Topics on advanced control with application to the control of Aerial Robots (Undergraduate level). Assistant/technical instructor (~20% of the course)</h2>: This course covers basic nonlinear control theory, mostly applied to quadrotors. The students use a crazyflie platform to test their own control designs.			
 
 <ul>
 <li> Autumn 2018</li>
 <li> Autumn 2016</li>
 </ul><br>
 
-<h2> Embedded Software with application to the control of Aerial Robots (Graduate level)</h2>			
+<h2> Embedded Software with application to the control of Aerial Robots (Graduate level). Assistant/technical instructor (~20% of the course)</h2>: This course covers basic nonlinear control theory, mostly applied to quadrotors. The students use a crazyflie platform to test their own control designs.					
 			
 <ul>
 <li> Spring 2017</li>
 </ul><br>
 
-<h2> Embedded Systems (Graduate level)</h2>						
+<h2> Embedded Systems (Graduate level). Assistant instructor (~10% of the course)</h2>: This part of the course covers real time kernel programming in a FRDMF64F board.						
 <ul>
 <li> Autumn 2017</li>
 </ul><br>
